# gz_vendor

./: create_vendor_packages.py  gz_vendor.repos
create_gz_vendor_pkg/: README.md  create_new_vendor_package.py  create_vendor_package.py  create_vendor_packages.py  gz_vendor_all_libs.py
create_gz_vendor_pkg/templates/: CMakeLists.txt.jinja  config.cmake.in  package.xml.jinja  vendor.dsv.in
gz_cmake_vendor/: CMakeLists.txt  package.xml
gz_math_vendor/: CMakeLists.txt  gz_math_vendor-extras.cmake.in  package.xml
gz_utils_vendor/: CMakeLists.txt  package.xml
test_gz_vendor/: CMakeLists.txt  package.xml
test_gz_vendor/src/: main.cc
