<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>test_gz_vendor</name>
  <version>0.0.1</version>
  <description>Test vendoring gazebo libraries</description>
  <maintainer email="mjcarroll@intrinsic.ai">Michael Carroll</maintainer>
  <license>Apache License 2.0</license>  <!-- Both this package and gz-math are ASL 2.0 -->

  <url type="website">https://github.com/gazebosim/gz-math</url>
  <author email="logans@cottsay.net">Scott K Logan</author>

  <buildtool_depend>ament_cmake_core</buildtool_depend>
  <buildtool_depend>ament_cmake_test</buildtool_depend>

  <depend>gz_utils_vendor</depend>
  <depend>gz_math_vendor</depend>

  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
